WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197649
iOSMac Share Sheet shows up at the wrong place
https://bugs.webkit.org/show_bug.cgi?id=197649
Summary
iOSMac Share Sheet shows up at the wrong place
Tim Horton
Reported
2019-05-07 01:17:45 PDT
iOSMac Share Sheet shows up at the wrong place
Attachments
Patch
(3.05 KB, patch)
2019-05-07 01:17 PDT
,
Tim Horton
megan_gardner
: review+
thorton
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-05-07 01:17:58 PDT
Created
attachment 369255
[details]
Patch
Tim Horton
Comment 2
2019-05-07 01:18:00 PDT
<
rdar://problem/50295563
>
Megan Gardner
Comment 3
2019-05-07 06:57:45 PDT
Comment on
attachment 369255
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=369255&action=review
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:5838 > + }
Is there no way to make a Rect from a Point? That seems like a thing we would want. I’m also assuming that it expands the rect to whatever size is best, and that giving it this start location is the best option.
Tim Horton
Comment 4
2019-05-07 11:51:56 PDT
Comment on
attachment 369255
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=369255&action=review
Actually <
rdar://problem/49922942
>
> Source/WebKit/ChangeLog:5 > + <
rdar://problem/50295563
>
This should be
rdar://problem/49922942
Tim Horton
Comment 5
2019-05-07 11:53:04 PDT
Comment on
attachment 369255
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=369255&action=review
>> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:5838 >> + } > > Is there no way to make a Rect from a Point? That seems like a thing we would want. > I’m also assuming that it expands the rect to whatever size is best, and that giving it this start location is the best option.
There are ways, but IMO they're uglier (maybe not anymore with {{{{{}}}}} magic) It's a rect to present *from*, so giving it one point just means that's where the popover arrow (or context menu) appears to originate from/point to.
Tim Horton
Comment 6
2019-05-07 12:04:18 PDT
https://trac.webkit.org/changeset/245022/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug