iOSMac Share Sheet shows up at the wrong place https://bugs.webkit.org/show_bug.cgi?id=197649 <rdar://problem/49922942>

Reviewed by Megan Gardner.

* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _showShareSheet:inRect:completionHandler:]):
(-[WKContentView _hoverGestureRecognizerChanged:]):
Pass the last mouse-over location as the presentation location for the
share sheet, if we don't have a rect to present from. Centering the popover
like we do on iPad doesn't work so well (at all) with a macOS context menu.


Canonical link: https://commits.webkit.org/211802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245022 268f45cc-cd09-0410-ab3c-d52691b4dbfc